--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Code4Wyatt/M5-D6#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.13.0",
@@ -27,6 +28,7 @@
     "http-errors": "^1.8.0",
     "multer": "^1.4.3",
     "nodemon": "^2.0.7",
+    "pg": "^8.7.1",
     "uniqid": "^5.4.0"
   }
 }
